# dickinson

./: .gitignore  Dickinson.vcxproj  Dickinson.vcxproj.filters  HOW_TO_RELEASE.txt  Makefile  Makefile.am  Makefile.in  README  README.rst  configure  configure.ac  csv.c  csv.h  dates.c  dates.h  dl.c  mktime_mod.c  mktime_mod.h  platform.h  strings.c  strings.h  strptime.c  ts.c  ts.h
doc/: api.rst  conf.py  copyright.rst  index.rst  install.rst
src/: Makefile.am  Makefile.in  csv.c  csv.h  dates.c  dates.h  dl.c  dl.h  misc.c  strings.c  strings.h  ts.c  ts.h
